--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,8 @@ development:
   database: motorgroup_development
   pool: 5
   username: root
-  password:
-  socket: /var/run/mysqld/mysqld.sock
+  password: welcome
+  socket: /tmp/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
